; ModuleID = '/home/carl/AnghaBench/freebsd/sys/sparc64/sparc64/extr_pmap.c_pmap_unwire_tte.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/sparc64/sparc64/extr_pmap.c_pmap_unwire_tte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.tte = type { i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@TD_WIRED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"pmap_unwire_tte: tp %p is missing TD_WIRED\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, %struct.TYPE_7__*, %struct.tte*, i32)* @pmap_unwire_tte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pmap_unwire_tte(%struct.TYPE_7__* %0, %struct.TYPE_7__* %1, %struct.tte* %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca %struct.tte*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %6, align 8
  store %struct.tte* %2, %struct.tte** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %10 = load i32, i32* @MA_OWNED, align 4
  %11 = call i32 @PMAP_LOCK_ASSERT(%struct.TYPE_7__* %9, i32 %10)
  %12 = load %struct.tte*, %struct.tte** %7, align 8
  %13 = getelementptr inbounds %struct.tte, %struct.tte* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @TD_WIRED, align 4
  %16 = and i32 %14, %15
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %4
  %19 = load %struct.tte*, %struct.tte** %7, align 8
  %20 = call i32 @panic(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), %struct.tte* %19)
  br label %21

21:                                               ; preds = %18, %4
  %22 = load %struct.tte*, %struct.tte** %7, align 8
  %23 = getelementptr inbounds %struct.tte, %struct.tte* %22, i32 0, i32 0
  %24 = load i32, i32* @TD_WIRED, align 4
  %25 = call i32 @atomic_clear_long(i32* %23, i32 %24)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = add nsw i32 %29, -1
  store i32 %30, i32* %28, align 4
  ret i32 1
}

declare dso_local i32 @PMAP_LOCK_ASSERT(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @panic(i8*, %struct.tte*) #1

declare dso_local i32 @atomic_clear_long(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
